Fix code block width on mobile
It wasn't the full width of the screen, because the max width was set to
the width of the content plus the spacing on the sides.

--- a/frontend/styles/code.css
+++ b/frontend/styles/code.css
@@ -33,9 +33,9 @@ pre:not(:last-child) {
 
 @media (--mobile-breakpoint) {
   pre {
-    margin-left: -20px;
-    margin-right: -20px;
-    max-width: inherit;
+    margin-left: calc(var(--spacing-small) * -1);
+    margin-right: calc(var(--spacing-small) * -1);
+    max-width: calc(100% + var(--spacing-small) * 2);
     border-radius: 0;
   }
 }
